[package]
name = "regalloc-benchmarks"
version = "0.1.0"
authors = ["Benjamin Bouvier <public@benj.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regalloc = { path = "../regalloc.rs/lib", features = ["enable-serde"] }
criterion = "0.3"
bincode = "1.2.1"
serde = "1.0.94"

[[bench]]
name = "compare"
harness = false
